log/build_2023-02-28_15-59-09/my_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ryanlin12/CSCE452_project2/install/my_package/lib/python3.10/site-packages/my_package/final_attempt.py", line 63
    // wrap g_goal.theta to [-pi, pi)
                                    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

